fix: scroll to methode section doesn't hidden by the navbar

--- a/src/app/(frontend)/(default)/styles.css
+++ b/src/app/(frontend)/(default)/styles.css
@@ -146,6 +146,7 @@ h1 {
 
 .methode-section
 {
+  scroll-margin-top: 100px;
   display: flex;
   flex-direction: column;
   gap: 16px;
